issue #28 nowrap

--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -23,6 +23,7 @@ atom-panel.modal,
     line-height: 32px;
     height: 32px + @component-padding;
     max-height: none;
+    white-space: nowrap;
     color: @text-color-highlight;
     background-color: transparent;
     margin: 0 -@component-padding*2;
